--- a/src/main/java/RunwayRedeclarationTool/sample.fxml
+++ b/src/main/java/RunwayRedeclarationTool/sample.fxml
@@ -3,6 +3,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="RunwayRedeclarationTool.Controller"
+<GridPane fx:controller="RunwayRedeclarationTool.Controllers.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 </GridPane>
