--- a/src/main/resources/NewRunwayWindow.fxml
+++ b/src/main/resources/NewRunwayWindow.fxml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TitledPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
+<AnchorPane minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
    <children>
-      <TitledPane animated="false" prefHeight="400.0" prefWidth="600.0" text="New Runway">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </content>
-      </TitledPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <BorderPane prefHeight="362.0" prefWidth="600.0">
+                     <center>
+                        <FlowPane orientation="VERTICAL" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Label alignment="CENTER" text="Enter new Runway Parameters">
+                                 <padding>
+                                    <Insets left="25.0" top="25.0" />
+                                 </padding>
+                              </Label>
+                              <FlowPane prefHeight="42.0" prefWidth="597.0">
+                                 <children>
+                                    <Label text="TORA: ">
+                                 <FlowPane.margin>
+                                    <Insets />
+                                 </FlowPane.margin></Label>
+                                    <TextField maxHeight="-Infinity" maxWidth="-Infinity">
+                                       <FlowPane.margin>
+                                          <Insets left="15.0" right="25.0" />
+                                       </FlowPane.margin></TextField>
+                                 </children>
+                                 <FlowPane.margin>
+                                    <Insets left="25.0" top="10.0" />
+                                 </FlowPane.margin>
+                              </FlowPane>
+                        <FlowPane>
+                           <children>
+                              <Label text="TODA:">
+                                 <FlowPane.margin>
+                                    <Insets top="15.0" />
+                                 </FlowPane.margin></Label>
+                              <TextField maxHeight="-Infinity" maxWidth="-Infinity">
+                                 <FlowPane.margin>
+                                    <Insets left="15.0" right="25.0" top="15.0" />
+                                 </FlowPane.margin>
+                              </TextField>
+                           </children>
+                           <FlowPane.margin>
+                              <Insets left="25.0" />
+                           </FlowPane.margin>
+                        </FlowPane>
+                           </children>
+                        </FlowPane>
+                     </center>
+                  </BorderPane>
+               </children></AnchorPane>
+
    </children>
 </AnchorPane>
