Another push to switch to 1080p scaling

--- a/src/main/resources/NewRunwayWindow.fxml
+++ b/src/main/resources/NewRunwayWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 
-<AnchorPane minHeight="500.0" minWidth="600.0" prefHeight="503.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
+<AnchorPane minHeight="500.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
     <children>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             <FlowPane orientation="VERTICAL" prefHeight="503.0" prefWidth="869.0">
