--- a/src/main/resources/NewRunwayWindow.fxml
+++ b/src/main/resources/NewRunwayWindow.fxml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 
-<AnchorPane minHeight="500.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
+<AnchorPane minHeight="450.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
     <children>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            <FlowPane orientation="VERTICAL" prefHeight="503.0" prefWidth="869.0">
+            <FlowPane orientation="VERTICAL" prefHeight="411.0" prefWidth="410.0">
                 <children>
                     <Label alignment="CENTER" text="Enter new Runway Parameters">
                         <padding>
                             <Insets left="25.0" top="25.0" />
                         </padding>
                     </Label>
+                    <FlowPane prefHeight="69.0" prefWidth="597.0">
+                        <children>
+                            <Label prefWidth="200.0" text="Runway Designation">
+                                <FlowPane.margin>
+                                    <Insets top="15.0" />
+                                </FlowPane.margin>
+                            </Label>
+                            <TextField fx:id="designation_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
+                                <FlowPane.margin>
+                                    <Insets top="15.0" />
+                                </FlowPane.margin>
+                            </TextField>
+                        </children>
+                        <FlowPane.margin>
+                            <Insets left="25.0" />
+                        </FlowPane.margin>
+                    </FlowPane>
                     <FlowPane prefHeight="42.0" prefWidth="667.0">
                         <children>
                             <Label prefWidth="80.0" text="TORA">
@@ -23,7 +40,7 @@
                                     <Insets right="120.0" />
                                 </FlowPane.margin>
                             </Label>
-                            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="450.0">
+                            <TextField fx:id="tora_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
                                 <FlowPane.margin>
                                     <Insets />
                                 </FlowPane.margin>
@@ -40,7 +57,7 @@
                                     <Insets right="120.0" top="15.0" />
                                 </FlowPane.margin>
                             </Label>
-                            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="450.0">
+                            <TextField fx:id="toda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
                                 <FlowPane.margin>
                                     <Insets top="15.0" />
                                 </FlowPane.margin>
@@ -50,14 +67,14 @@
                             <Insets left="25.0" />
                         </FlowPane.margin>
                     </FlowPane>
-                    <FlowPane prefHeight="31.0" prefWidth="667.0">
+                    <FlowPane prefHeight="31.0" prefWidth="600.0">
                         <children>
                             <Label prefWidth="80.0" text="ASDA">
                                 <FlowPane.margin>
                                     <Insets right="120.0" top="15.0" />
                                 </FlowPane.margin>
                             </Label>
-                            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="450.0">
+                            <TextField fx:id="asda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
                                 <FlowPane.margin>
                                     <Insets top="15.0" />
                                 </FlowPane.margin>
@@ -74,24 +91,7 @@
                                     <Insets right="120.0" top="15.0" />
                                 </FlowPane.margin>
                             </Label>
-                            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="450.0">
-                                <FlowPane.margin>
-                                    <Insets top="15.0" />
-                                </FlowPane.margin>
-                            </TextField>
-                        </children>
-                        <FlowPane.margin>
-                            <Insets left="25.0" />
-                        </FlowPane.margin>
-                    </FlowPane>
-                    <FlowPane prefHeight="69.0" prefWidth="597.0">
-                        <children>
-                            <Label prefWidth="200.0" text="Displaced Threshold">
-                                <FlowPane.margin>
-                                    <Insets top="15.0" />
-                                </FlowPane.margin>
-                            </Label>
-                            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="450.0">
+                            <TextField fx:id="lda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
                                 <FlowPane.margin>
                                     <Insets top="15.0" />
                                 </FlowPane.margin>
@@ -103,6 +103,20 @@
                     </FlowPane>
                 </children>
             </FlowPane>
+      <FlowPane layoutY="364.0" prefHeight="55.0" prefWidth="568.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#handleClearButton" text="Clear">
+               <FlowPane.margin>
+                  <Insets left="350.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button fx:id="submitButton" mnemonicParsing="false" onMouseClicked="#handleSubmitButton" text="Submit">
+               <FlowPane.margin>
+                  <Insets left="50.0" />
+               </FlowPane.margin>
+            </Button>
+         </children>
+      </FlowPane>
 
     </children>
 </AnchorPane>
