--- a/src/main/resources/NewRunwayWindow.fxml
+++ b/src/main/resources/NewRunwayWindow.fxml
@@ -3,107 +3,204 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 
-<AnchorPane minHeight="450.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
+<AnchorPane minHeight="450.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.View.NewRunwayWindow">
     <children>
-            <FlowPane orientation="VERTICAL" prefHeight="411.0" prefWidth="410.0">
+            <FlowPane orientation="VERTICAL" prefHeight="356.0" prefWidth="821.0">
                 <children>
                     <Label alignment="CENTER" text="Enter new Runway Parameters">
                         <padding>
                             <Insets left="25.0" top="25.0" />
                         </padding>
                     </Label>
-                    <FlowPane prefHeight="69.0" prefWidth="597.0">
-                        <children>
-                            <Label prefWidth="200.0" text="Runway Designation">
-                                <FlowPane.margin>
-                                    <Insets top="15.0" />
-                                </FlowPane.margin>
-                            </Label>
-                            <TextField fx:id="designation_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
-                                <FlowPane.margin>
-                                    <Insets top="15.0" />
-                                </FlowPane.margin>
-                            </TextField>
-                        </children>
-                        <FlowPane.margin>
-                            <Insets left="25.0" />
-                        </FlowPane.margin>
-                    </FlowPane>
-                    <FlowPane prefHeight="42.0" prefWidth="667.0">
-                        <children>
-                            <Label prefWidth="80.0" text="TORA">
-                                <FlowPane.margin>
-                                    <Insets right="120.0" />
-                                </FlowPane.margin>
-                            </Label>
-                            <TextField fx:id="tora_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
-                                <FlowPane.margin>
-                                    <Insets />
-                                </FlowPane.margin>
-                            </TextField>
-                        </children>
-                        <FlowPane.margin>
-                            <Insets left="25.0" top="10.0" />
-                        </FlowPane.margin>
-                    </FlowPane>
-                    <FlowPane prefHeight="47.0" prefWidth="667.0">
-                        <children>
-                            <Label prefWidth="80.0" text="TODA">
-                                <FlowPane.margin>
-                                    <Insets right="120.0" top="15.0" />
-                                </FlowPane.margin>
-                            </Label>
-                            <TextField fx:id="toda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
-                                <FlowPane.margin>
-                                    <Insets top="15.0" />
-                                </FlowPane.margin>
-                            </TextField>
-                        </children>
-                        <FlowPane.margin>
-                            <Insets left="25.0" />
-                        </FlowPane.margin>
-                    </FlowPane>
-                    <FlowPane prefHeight="31.0" prefWidth="600.0">
-                        <children>
-                            <Label prefWidth="80.0" text="ASDA">
-                                <FlowPane.margin>
-                                    <Insets right="120.0" top="15.0" />
-                                </FlowPane.margin>
-                            </Label>
-                            <TextField fx:id="asda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
-                                <FlowPane.margin>
-                                    <Insets top="15.0" />
-                                </FlowPane.margin>
-                            </TextField>
-                        </children>
-                        <FlowPane.margin>
-                            <Insets left="25.0" />
-                        </FlowPane.margin>
-                    </FlowPane>
-                    <FlowPane prefHeight="53.0" prefWidth="667.0">
-                        <children>
-                            <Label prefWidth="80.0" text="LDA">
-                                <FlowPane.margin>
-                                    <Insets right="120.0" top="15.0" />
-                                </FlowPane.margin>
-                            </Label>
-                            <TextField fx:id="lda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0">
-                                <FlowPane.margin>
-                                    <Insets top="15.0" />
-                                </FlowPane.margin>
-                            </TextField>
-                        </children>
-                        <FlowPane.margin>
-                            <Insets left="25.0" />
-                        </FlowPane.margin>
-                    </FlowPane>
+            <SplitPane dividerPositions="0.5" prefHeight="299.0" prefWidth="771.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="332.0" prefWidth="290.0">
+                    <children>
+                        <FlowPane layoutX="-4.0" orientation="VERTICAL" prefHeight="299.0" prefWidth="1935.0">
+                            <children>
+                                <FlowPane prefHeight="66.0" prefWidth="667.0">
+                                    <children>
+                                        <Label prefWidth="200.0" text="Runway Designation">
+                                            <FlowPane.margin>
+                                                <Insets top="15.0" />
+                                            </FlowPane.margin>
+                                        </Label>
+                                        <TextField fx:id="designation_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                            <FlowPane.margin>
+                                                <Insets top="15.0" />
+                                            </FlowPane.margin>
+                                        </TextField>
+                                    </children>
+                                    <FlowPane.margin>
+                                        <Insets left="25.0" />
+                                    </FlowPane.margin>
+                                </FlowPane>
+                                <FlowPane prefHeight="150.0" prefWidth="619.0">
+                                    <children>
+                                        <Label prefWidth="80.0" text="TORA">
+                                            <FlowPane.margin>
+                                                <Insets right="120.0" />
+                                            </FlowPane.margin>
+                                        </Label>
+                                        <TextField fx:id="tora_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                            <FlowPane.margin>
+                                                <Insets />
+                                            </FlowPane.margin>
+                                        </TextField>
+                                        <FlowPane prefHeight="31.0" prefWidth="600.0">
+                                            <children>
+                                                <Label prefWidth="80.0" text="ASDA">
+                                                    <FlowPane.margin>
+                                                        <Insets right="120.0" top="15.0" />
+                                                    </FlowPane.margin>
+                                                </Label>
+                                                <TextField fx:id="asda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                                    <FlowPane.margin>
+                                                        <Insets top="15.0" />
+                                                    </FlowPane.margin>
+                                                </TextField>
+                                            </children>
+                                        </FlowPane>
+                                        <FlowPane prefHeight="47.0" prefWidth="667.0">
+                                            <children>
+                                                <Label prefWidth="80.0" text="TODA">
+                                                    <FlowPane.margin>
+                                                        <Insets right="120.0" top="15.0" />
+                                                    </FlowPane.margin>
+                                                </Label>
+                                                <TextField fx:id="toda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                                    <FlowPane.margin>
+                                                        <Insets top="15.0" />
+                                                    </FlowPane.margin>
+                                                </TextField>
+                                            </children>
+                                        </FlowPane>
+                                    </children>
+                                    <FlowPane.margin>
+                                        <Insets left="25.0" />
+                                    </FlowPane.margin>
+                                </FlowPane>
+                                <FlowPane prefHeight="53.0" prefWidth="667.0">
+                                    <children>
+                                        <Label prefWidth="80.0" text="LDA">
+                                            <FlowPane.margin>
+                                                <Insets right="120.0" top="15.0" />
+                                            </FlowPane.margin>
+                                        </Label>
+                                        <TextField fx:id="lda_textfield_1" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                            <FlowPane.margin>
+                                                <Insets top="15.0" />
+                                            </FlowPane.margin>
+                                        </TextField>
+                                    </children>
+                                    <FlowPane.margin>
+                                        <Insets left="25.0" />
+                                    </FlowPane.margin>
+                                </FlowPane>
+                            </children>
+                        </FlowPane>
+                    </children>
+                </AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="332.0" prefWidth="345.0">
+                     <children>
+                        <FlowPane layoutX="-4.0" orientation="VERTICAL" prefHeight="297.0" prefWidth="1935.0">
+                           <children>
+                                      <FlowPane prefHeight="67.0" prefWidth="667.0">
+                                          <children>
+                                              <Label prefWidth="200.0" text="Runway Designation">
+                                                  <FlowPane.margin>
+                                                      <Insets top="15.0" />
+                                                  </FlowPane.margin>
+                                              </Label>
+                                              <TextField fx:id="designation_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                                  <FlowPane.margin>
+                                                      <Insets top="15.0" />
+                                                  </FlowPane.margin>
+                                              </TextField>
+                                          </children>
+                                 <FlowPane.margin>
+                                    <Insets left="25.0" />
+                                 </FlowPane.margin>
+                                          </FlowPane>
+                                      <FlowPane prefHeight="150.0" prefWidth="619.0">
+                                          <children>
+                                              <Label prefWidth="80.0" text="TORA">
+                                                  <FlowPane.margin>
+                                                      <Insets right="120.0" />
+                                                  </FlowPane.margin>
+                                              </Label>
+                                              <TextField fx:id="tora_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                                  <FlowPane.margin>
+                                                      <Insets />
+                                                  </FlowPane.margin>
+                                              </TextField>
+                                            <FlowPane prefHeight="31.0" prefWidth="600.0">
+                                                <children>
+                                                    <Label prefWidth="80.0" text="ASDA">
+                                                        <FlowPane.margin>
+                                                            <Insets right="120.0" top="15.0" />
+                                                        </FlowPane.margin>
+                                                    </Label>
+                                                    <TextField fx:id="asda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                                        <FlowPane.margin>
+                                                            <Insets top="15.0" />
+                                                        </FlowPane.margin>
+                                                    </TextField>
+                                                </children>
+                                            </FlowPane>
+                                            <FlowPane prefHeight="47.0" prefWidth="667.0">
+                                                <children>
+                                                    <Label prefWidth="80.0" text="TODA">
+                                                        <FlowPane.margin>
+                                                            <Insets right="120.0" top="15.0" />
+                                                        </FlowPane.margin>
+                                                    </Label>
+                                                    <TextField fx:id="toda_textfield" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                                        <FlowPane.margin>
+                                                            <Insets top="15.0" />
+                                                        </FlowPane.margin>
+                                                    </TextField>
+                                                </children>
+                                            </FlowPane>
+                                          </children>
+                                 <FlowPane.margin>
+                                    <Insets left="25.0" />
+                                 </FlowPane.margin>
+                                      </FlowPane>
+                                      <FlowPane prefHeight="53.0" prefWidth="667.0">
+                                          <children>
+                                              <Label prefWidth="80.0" text="LDA">
+                                                  <FlowPane.margin>
+                                                      <Insets right="120.0" top="15.0" />
+                                                  </FlowPane.margin>
+                                              </Label>
+                                              <TextField fx:id="lda_textfield_1" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="150.0">
+                                                  <FlowPane.margin>
+                                                      <Insets top="15.0" />
+                                                  </FlowPane.margin>
+                                              </TextField>
+                                          </children>
+                                 <FlowPane.margin>
+                                    <Insets left="25.0" />
+                                 </FlowPane.margin>
+                                      </FlowPane>
+                           </children>
+                        </FlowPane>
+                      </children>
+                  </AnchorPane>
+              </items>
+               <FlowPane.margin>
+                  <Insets left="25.0" right="25.0" top="5.0" />
+               </FlowPane.margin>
+            </SplitPane>
                 </children>
             </FlowPane>
-      <FlowPane layoutY="364.0" prefHeight="55.0" prefWidth="568.0">
+      <FlowPane layoutY="395.0" prefHeight="55.0" prefWidth="568.0">
          <children>
             <Button mnemonicParsing="false" onAction="#handleClearButton" text="Clear">
                <FlowPane.margin>
