Small changes to control panel

--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -55,7 +55,7 @@
         </TabPane>
     </center>
     <right>
-        <VBox prefWidth="350.0" BorderPane.alignment="CENTER">
+        <VBox prefHeight="766.0" prefWidth="362.0" BorderPane.alignment="CENTER">
             <GridPane hgap="5.0">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" prefWidth="100.0" />
@@ -86,9 +86,9 @@
             </GridPane>
             <GridPane hgap="5.0">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT" prefWidth="250.0" />
-                    <ColumnConstraints prefWidth="70.0" />
-                    <ColumnConstraints minWidth="10.0" prefWidth="40.0" />
+                    <ColumnConstraints halignment="RIGHT" maxWidth="237.0" minWidth="225.0" prefWidth="225.0" />
+                    <ColumnConstraints maxWidth="99.0" minWidth="86.0" prefWidth="99.0" />
+                    <ColumnConstraints maxWidth="22.0" minWidth="10.0" prefWidth="22.0" />
                 </columnConstraints>
                 <rowConstraints>
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -96,17 +96,17 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 </rowConstraints>
-                <Label text="Obstruction distance from THR LEFT:" />
-                <Label text="Obstruction distance from THR RIGHT:" GridPane.rowIndex="1" />
-                <Label text="Obstruction distance from C/L:" GridPane.rowIndex="3" />
+                <Label text="Obstacle distance from THR LEFT:" />
+                <Label text="Obstacle distance from THR RIGHT:" GridPane.rowIndex="1" />
+                <Label text="Obstacle distance from C/L:" GridPane.rowIndex="3" />
                 <TextField fx:id="distanceFromTHRLeft" GridPane.columnIndex="1" />
                 <TextField fx:id="distanceFromTHRRight" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <TextField fx:id="distanceFromCL" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                 <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                 <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                 <Label text="m" GridPane.columnIndex="2" />
-                <Label text="Obstruction side of C/L:" GridPane.rowIndex="2" />
-                <ComboBox fx:id="runwaySideComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label text="Obstacle side of C/L:" GridPane.rowIndex="2" />
+                <ComboBox fx:id="runwaySideComboBox" prefHeight="31.0" prefWidth="101.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <padding>
                     <Insets bottom="10.0" />
                 </padding>
