Changed 'obstruction' to 'obstacle'

--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -25,7 +25,7 @@
         <MenuBar BorderPane.alignment="CENTER">
             <Menu text="File">
                 <MenuItem fx:id="new_runway_button" onAction="#handleNewRunway" text="New runway..." />
-                <MenuItem onAction="#handleNewObstacle" text="New obstruction..." />
+                <MenuItem onAction="#handleNewObstacle" text="New obstacle..." />
             </Menu>
             <Menu text="View">
                 <CheckMenuItem text="Clearway" />
