--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -20,13 +20,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
+<BorderPane prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <Menu text="File">
-                <MenuItem onAction="#handleNewAirport" text="New airport..."/>
+                <MenuItem onAction="#handleNewAirport" text="New airport..." />
                 <MenuItem fx:id="new_runway_button" onAction="#handleNewRunway" text="New runway..." />
                 <MenuItem onAction="#handleNewObstacle" text="New obstacle..." />
+            <Menu mnemonicParsing="false" text="Import">
+              <items>
+                  <MenuItem mnemonicParsing="false" onAction="#handleImportFile" text="File" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleImportFolder" text="Folder" />
+              </items>
+            </Menu>
             </Menu>
             <Menu text="View">
                 <CheckMenuItem text="Clearway" />
