--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -55,9 +55,8 @@
                         <FlowPane fx:id="leftTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
                     </Tab>
                     <Tab text="Side-on view">
-                  <content>
-                     <FlowPane prefHeight="200.0" prefWidth="200.0" />
-                  </content></Tab>
+                        <FlowPane fx:id="leftSideOnViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
+                  </Tab>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
@@ -68,7 +67,9 @@
                     <Tab style="-fx-tab-header-background: transparent;" text="Top-down view">
                         <FlowPane fx:id="rightTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
                     </Tab>
-                    <Tab text="Side-on view" />
+                    <Tab text="Side-on view">
+                        <FlowPane fx:id="rightSideOnViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
+                    </Tab>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
